Laplacian smooth on instanced objects leads to crash #38403

Closed
opened 2014-01-30 00:39:03 +01:00 by Paolo Acampora · 12 comments
Member

System Information
Ubuntu 12.04 and nvidia GeForce G 103M/PCIe/SSE2

Blender Version
Broken: (2.69.10 dd684f5)

Short description of error
Crash when laplacian smooth modifier is active on two instances of an object.

Exact steps for others to reproduce the error

  • Duplicate Linked (ALT + D) the initial cube
  • Add a laplacian smooth modifier on both cubes

Bum!

Looks like it happens when nlEnd is called in function laplaciansmoothModifier_do, I could not investigate any further.

**System Information** Ubuntu 12.04 and nvidia GeForce G 103M/PCIe/SSE2 **Blender Version** Broken: (2.69.10 dd684f5) **Short description of error** Crash when laplacian smooth modifier is active on two instances of an object. **Exact steps for others to reproduce the error** - Duplicate Linked (ALT + D) the initial cube - Add a laplacian smooth modifier on both cubes # Bum! Looks like it happens when nlEnd is called in function laplaciansmoothModifier_do, I could not investigate any further.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @PaoloAcampora

Added subscriber: @PaoloAcampora
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

Probably caused by recent introduction of multithreading in the depgraph. It appears the laplacian-smooth modifier uses the OpenNL library in a non-threadsafe way. This is a problem with the global "current state" of OpenNL, i'll have to investigate if we can create explicit contexts for OpenNL instead, otherwise the modifiers would have to use an ugly mutex to prevent concurrent execution ...

Probably caused by recent introduction of multithreading in the depgraph. It appears the laplacian-smooth modifier uses the OpenNL library in a non-threadsafe way. This is a problem with the global "current state" of OpenNL, i'll have to investigate if we can create explicit contexts for OpenNL instead, otherwise the modifiers would have to use an ugly mutex to prevent concurrent execution ...
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member
For reference: This is **not** threadsafe https://developer.blender.org/diffusion/B/browse/master/intern/opennl/intern/opennl.c;ab6157a06ab49fc1f78f1575d373c83037cd39b7$534
Member

Added subscriber: @brecht

Added subscriber: @brecht

This issue was referenced by blender/blender-addons-contrib@2b55d7895c

This issue was referenced by blender/blender-addons-contrib@2b55d7895ced2c737e827e6a808634f730d275fc

This issue was referenced by 2b55d7895c

This issue was referenced by 2b55d7895ced2c737e827e6a808634f730d275fc
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 2b55d7895c.

Closed by commit 2b55d7895c.
Author
Member

how fast, thank you! :)

how fast, thank you! :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38403
No description provided.