source/blender/modifiers/intern/MOD_util.c
@@ -61,6 +61,10 @@
 
 #include "RE_shader_ext.h"
 
+#ifdef OPENNL_THREADING_HACK
+#include "BLI_threads.h"
+#endif
+
 void modifier_init_texture(Scene *scene, Tex *tex)
 {
 	if (!tex)
@@ -234,6 +238,24 @@ void modifier_get_vgroup(Object *ob, DerivedMesh *dm, const char *name, MDeformV
 			*dvert = dm->getVertDataArray(dm, CD_MDEFORMVERT);
 	}
 }
+
+
+#ifdef OPENNL_THREADING_HACK
+
+static ThreadMutex opennl_context_mutex = BLI_MUTEX_INITIALIZER;
+
+void modifier_opennl_lock(void)
+{
+	BLI_mutex_lock(&opennl_context_mutex);
+}
+
+void modifier_opennl_unlock(void)
+{
+	BLI_mutex_unlock(&opennl_context_mutex);
+}
+
+#endif
+
 
 /* only called by BKE_modifier.h/modifier.c */
 void modifier_type_init(ModifierTypeInfo *types[])
